2009-02-026  Matthias Clasen <mclasen@redhat.com>

	* gnome-session/gs-idle-monitor.c: Ask for AlertNotify in a way
	that XSync understands. (#567958)

2009-02-26  Vincent Untz  <vuntz@gnome.org>

	* capplet/gsm-properties-dialog.c: (edit_app_dialog):
	* tools/gnome-session-save.c: (display_error): use a Close button
	instead of an Ok button in error dialogs. If considered an UI change,
	then it's trivial and it doesn't affect documentation.

2009-02-25  Paolo Borelli  <pborelli@katamail.com>

	* gnome-session/gsm-client.c:
	chain up finalize

2009-02-23  Lucas Rocha  <lucasr@gnome.org>

	* gnome-session/Makefile.am, gnome-session/gsm-resumed-app.[ch]:
	remove GsmResumedApp code as it's being used anymore.

2009-02-23  Lucas Rocha  <lucasr@gnome.org>

	* gnome-session/main.c, gnome-session/gsm-manager.c: remove code for
	handling legacy session saving files as it won't be supported anymore.

2009-02-23  Lucas Rocha  <lucasr@gnome.org>

	Bug 552387 – gnome-session doesn't save session anymore

	* gnome-session/Makefile.am: add gsm-session-save.[ch] to the build.
	* gnome-session/gsm-session-save.[ch]: session saving functions.
	* gnome-session/gsm-autostart-app.c (load_desktop_file): check if the
	desktop file has X-GNOME-Autostart-startup-id to define startup id of
	the GsmAutostartApp.
	* gnome-session/gsm-client.[ch] (gsm_client_save): add gsm_client_save
	virtual method which should be implemented by each type of client.
	* gnome-session/gsm-dbus-client.c, gnome-session/gsm-xsmp-client.c:
	add respective gsm_client_save implementations. D-Bus clients still
	don't implement saving.
	* gnome-session/gsm-manager.c (auto_save_is_enabled,
	maybe_save_session): save session state if auto save is enable before
	finalizing the session.
	* gnome-session/main.c (load_standard_apps): load GsmApps from the
	saved session directory.

2009-02-23  Lucas Rocha  <lucasr@gnome.org>

	* gnome-session/main.c, gnome-session/gsm-util.[ch]: move